--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/_small.scss
@@ -435,6 +435,25 @@ main {
   }
 }
 
+// SERVICE AREA
+.service-area {
+  width: 100%;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  figure {
+    width: 100%;
+    height: 0;
+    padding-bottom: 32%;
+    img {
+      width: 100%;
+      height: auto;
+    }
+  }
+}
+
 // FOOTER
 footer {
   width: 100vw;
