--- a/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
+++ b/site-cabot-cruises/wp-content/themes/cruiseTheme/styles/styles.css
@@ -778,6 +778,24 @@ main {
   background: #2797e2;
 }
 
+.service-area {
+  width: 100%;
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+}
+.service-area figure {
+  width: 100%;
+  height: 0;
+  padding-bottom: 32%;
+}
+.service-area figure img {
+  width: 100%;
+  height: auto;
+}
+
 footer {
   width: 100vw;
   background: #bbbbbb;
